# common-savvly

./: dev_api.json  prd_api.json
FIGMA/: README.md
React-MSAL/: README.md  package-lock.json  package.json
activedir_login/: README.md
activedirtest/: requirements.txt
admin_page/: README.md  package-lock.json  package.json
advisor_app/: README.md  package-lock.json  package.json
advisor_app_mine/: README.md  package-lock.json  package.json  run_app.bat
api/: .gitignore  .gitmodules  app.py  requirements.txt  testapi.html  testapi2.html
common/: readme.txt
commontest/: .gitignore  .gitmodules  SimulationMultiples.xlsx  azure_file_test.py  commontest.py  create_mat_from_excel.py  filetest.py  msgraphtest.py  potential_clients_tests.py  requirements.txt  ria_tests.py  simulation_test.py  test_advisor_info.py  tests.py  (+6 more)
docusign-integration/: .gitignore  Dockerfile  README.md  build-container.sh  deployment.yml  private.key  setup.cfg  setup.py  testing.http
docusign-integration/src/: app.py
docusign-integration/src/config/: consts.py  jwt_config.py
docusign-integration/src/docusign_service/: __init__.py  docusign_service.py
docusign-integration/src/eSignature/: __init__.py  docusign_client.py
fmv/: .gitignore  .gitmodules  Dockerfile  README.md  build-container.sh  deployment.yml  setup.cfg  setup.py
fmv/src/: fmv.py  updaterepo.sh
fmv/src/common/: configuration-dev.json  configuration.json  readme.txt
fmv/src/common/controllers/: dbhandles.py  firmvaluemarket.py  moneytransfer.py
fmv/src/common/database/: db_table.py  db_tablecollection.py  db_wrapper.py
fmv/src/common/exceptions/: json_exceptions.py
fmv/src/common/kv/: kv_wrapper.py
fmv/src/common/models/: dbdailydata.py  dbusertables.py
fmv/src/common/util/tests/: config_wrapper_test.py  string_helper_test.py
(+463 files in other folders)
