[metadata]
name = docusign-integration
version = 1.0.0
author = Dave Spadea
author_email = dave@spadea.tech
description = Service which runs periodically and sends docusign documents for e-signature
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Savvly/docusign-integration
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]

scripts =
    src/app.py

package_dir =
    =src

packages = find:
python_requires = >=3.6
install_requires =
    requests>=2.27.1
    #flask==2.0.3
    docusign-esign==3.15.0
    #flask-session==0.4.0
    #flask-login==0.5.0
    #flask-wtf==1.0.0
    #apscheduler==3.9.0.post1
    #msal==1.17.0
    #cassandra-driver==3.25.0
    #msrestazure==0.6.4
    #azure-keyvault-secrets==4.3.0
    #azure-identity==1.7.1
    #azure-graphrbac==0.61.1
    pytz
    flask
    gunicorn

[options.packages.find]
where = src
