[metadata]
name = fmv
version = 0.0.1
author = Danny zadok
author_email = dan.zadok@gmail.com
description = Firm Market Value 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Savvly/fmv
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]

scripts =
    src/fmv.py

package_dir =
    = src

packages = find:
python_requires = >=3.6
install_requires =
    requests>=2.25.1
    apscheduler==3.8.1
    msal==1.10.0
    cassandra-driver==3.20.2
    msrestazure==0.6.4
    azure-keyvault-secrets==4.2.0
    azure-identity==1.5.0
    #azure.graphrbac==0.60.0
    pytz
	python-dateutil==2.8.2

[options.packages.find]
where = src
